Use Bootstrap to create columns for index and notifications.

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -38,7 +38,7 @@
                         <i class="fa fa-bolt" aria-hidden="true"></i>Moments
                     </a>
 
-                    <a href="{% url 'core:index' %}" class="navbar-brand">
+                    <a href="{% url 'tweets:tweet_list' %}" class="navbar-brand">
                         <i class="fa fa-bell" aria-hidden="true"></i>Notifications
                     </a>
                     
