--- a/tweets/templates/tweets/tweet_new.html
+++ b/tweets/templates/tweets/tweet_new.html
@@ -8,7 +8,7 @@
     	{% endfor %}
 
     	<button type="submit" class="btn btn-primary btn-block btn-lg">
-    		Create new Tweet
+    		Tweet
     	</button>
     </form>
 {% endblock content %}
