--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -45,10 +45,12 @@
                     <a href="{% url 'core:index' %}" class="navbar-brand">
                         <i class="fa fa-envelope" aria-hidden="true"></i>Messages
                     </a>
+                    
 
-                    <a href="{% url 'core:index' %}" class="navbar-brand">
-                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                    <a href="{% url 'core:index' %}" class="Icon logo">
+                        <img class="navbar-brand navbar-logo" src="https://www.dropbox.com/s/hx8tbx991rkz3rr/awesome_tweet.png?dl=1">
                     </a>
+                    
                 </div>
                 <div class="collapse navbar-collapse" id="navbar-header-collapse">
                     <ul class="nav navbar-nav navbar-right">
