--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -23,36 +23,32 @@
         <nav class="navbar navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-header-collapse" aria-expanded="false">
+                    <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-header-collapse" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                    </button>
+                    </button> -->
                
+                
+                    <img class="navbar-brand icon-logo" src="https://www.dropbox.com/s/hx8tbx991rkz3rr/awesome_tweet.png?dl=1">
+
                     <a href="{% url 'core:index' %}" class="navbar-brand">
-                        <i class="fa fa-home" aria-hidden="true"></i>Home
+                        <i class="fa fa-home" aria-hidden="true"></i>
                     </a>
 
                     <a href="{% url 'core:index' %}" class="navbar-brand">
-                        <i class="fa fa-bolt" aria-hidden="true"></i>Moments
+                        <i class="fa fa-bolt" aria-hidden="true"></i>
                     </a>
 
                     <a href="{% url 'tweets:tweet_list' %}" class="navbar-brand">
-                        <i class="fa fa-bell" aria-hidden="true"></i>Notifications
+                        <i class="fa fa-bell" aria-hidden="true"></i>
                     </a>
                     
                     <a href="{% url 'core:index' %}" class="navbar-brand">
-                        <i class="fa fa-envelope" aria-hidden="true"></i>Messages
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
                     </a>
-                    
-
-                    <a href="{% url 'core:index' %}" class="Icon logo">
-                        <img class="navbar-brand navbar-logo" src="https://www.dropbox.com/s/hx8tbx991rkz3rr/awesome_tweet.png?dl=1">
-                    </a>
-                    
-                </div>
-                <div class="collapse navbar-collapse" id="navbar-header-collapse">
+                
                     <ul class="nav navbar-nav navbar-right">
                         {% if request.user.is_authenticated %}
                             <li><a href="{% url 'accounts:logout' %}">Logout</a></li>
@@ -61,8 +57,11 @@
                             <li><a href="{% url 'accounts:register' %}">Sign Up</a></li>
                             <li><p class="navbar-text navbar-right">Signed in as {{request.user.username}}</p></li>
                         {% endif %}
-                    </ul>                             
+                    </ul> 
+                   
                 </div>
+                <!-- <div class="collapse navbar-collapse" id="navbar-header-collapse"> -->
+                
             </div>
         </nav>
     </header>
