--- a/user_profiles/templates/user_profiles/profile.html
+++ b/user_profiles/templates/user_profiles/profile.html
@@ -3,7 +3,7 @@
 {% block content %}
 	<div class="row">
 		<div class="col-lg-3 col-xs-4 tweet-lg-left">
-			<h2>{{user_data}}</h2>
+			<h2>{{user_data.username}}</h2>
 		</div>
 		<div class="col-lg-6 col-xs-8 tweet-lg-center">
 			
