--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -22,8 +22,8 @@
     <header>
         <nav class="navbar navbar-fixed-top">
             <div class="container">
-                <div class="navbar-header">
-                    <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-header-collapse" aria-expanded="false">
+                <!-- <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-header-collapse" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -31,24 +31,44 @@
                     </button> -->
                
                 
-                    <img class="navbar-brand icon-logo" src="https://www.dropbox.com/s/hx8tbx991rkz3rr/awesome_tweet.png?dl=1">
+                <img class="navbar-brand icon-logo" src="https://www.dropbox.com/s/hx8tbx991rkz3rr/awesome_tweet.png?dl=1">
 
-                    <a href="{% url 'core:index' %}" class="navbar-brand">
-                        <i class="fa fa-home" aria-hidden="true"></i>
-                    </a>
+                <a href="{% url 'core:index' %}" class="navbar-brand">
+                    <i class="fa fa-home" aria-hidden="true"></i>
+                </a>
 
-                    <a href="{% url 'core:index' %}" class="navbar-brand">
-                        <i class="fa fa-bolt" aria-hidden="true"></i>
-                    </a>
+                <a href="{% url 'core:index' %}" class="navbar-brand">
+                    <i class="fa fa-bolt" aria-hidden="true"></i>
+                </a>
 
-                    <a href="{% url 'tweets:tweet_list' %}" class="navbar-brand">
-                        <i class="fa fa-bell" aria-hidden="true"></i>
-                    </a>
-                    
-                    <a href="{% url 'core:index' %}" class="navbar-brand">
-                        <i class="fa fa-envelope" aria-hidden="true"></i>
-                    </a>
+                <a href="{% url 'tweets:tweet_list' %}" class="navbar-brand">
+                    <i class="fa fa-bell" aria-hidden="true"></i>
+                </a>
                 
+                <a href="{% url 'core:index' %}" class="navbar-brand">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                </a>
+               
+            </div>
+            <div class="navbar-right navbar-fixed-top navbar">
+                
+                {% if request.user.is_authenticated %}
+                    <a cclass="navbar-brand navbar-right" href="{% url 'accounts:logout' %}">Logout
+                    </a>
+                {% else %}
+                    <a class="navbar-brand navbar-right" href="{% url 'accounts:login' %}">Login</a>
+                    <a class="navbar-brand navbar-right" href="{% url 'accounts:register' %}">Sign Up</a>
+                    <p class="navbar-text navbar-right">
+                        Signed in as {{request.user.username}}
+                    </p>
+                {% endif %}
+
+                <a class="navbar-brand navbar-right" href="{% url 'user_profiles:profile_list' %}"> 
+                    <img src="../core/awesome_profile.png">
+                </a>
+            </div>
+                <!-- <div class="collapse navbar-collapse" id="navbar-header-collapse">
+                    
                     <ul class="nav navbar-nav navbar-right">
                         {% if request.user.is_authenticated %}
                             <li><a href="{% url 'accounts:logout' %}">Logout</a></li>
@@ -57,11 +77,8 @@
                             <li><a href="{% url 'accounts:register' %}">Sign Up</a></li>
                             <li><p class="navbar-text navbar-right">Signed in as {{request.user.username}}</p></li>
                         {% endif %}
-                    </ul> 
-                   
-                </div>
-                <!-- <div class="collapse navbar-collapse" id="navbar-header-collapse"> -->
-                
+                    </ul>                             
+                </div> -->
             </div>
         </nav>
     </header>
