--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -21,17 +21,9 @@
 <body>
     <header>
         <nav class="navbar navbar-fixed-top">
-            <div class="container">
-                <!-- <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-header-collapse" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button> -->
-               
+            <div class="container">               
                 
-                <img class="navbar-brand icon-logo" src="https://www.dropbox.com/s/hx8tbx991rkz3rr/awesome_tweet.png?dl=1">
+                <img class="navbar-brand icon-logo" src="https://www.dropbox.com/s/hx8tbx991rkz3rr/awesome_tweet.png?dl=1"/>
 
                 <a href="{% url 'core:index' %}" class="navbar-brand">
                     <i class="fa fa-home" aria-hidden="true"></i>
@@ -50,10 +42,10 @@
                 </a>
                
             </div>
-            <div class="navbar-right navbar-fixed-top navbar">
+            <div class="container navbar-fixed-top">
                 
                 {% if request.user.is_authenticated %}
-                    <a cclass="navbar-brand navbar-right" href="{% url 'accounts:logout' %}">Logout
+                    <a class="navbar-brand navbar-right" href="{% url 'accounts:logout' %}">Logout
                     </a>
                 {% else %}
                     <a class="navbar-brand navbar-right" href="{% url 'accounts:login' %}">Login</a>
@@ -66,20 +58,7 @@
                 <a class="navbar-brand navbar-right" href="{% url 'user_profiles:profile_list' %}"> 
                     <img src="../core/awesome_profile.png">
                 </a>
-            </div>
-                <!-- <div class="collapse navbar-collapse" id="navbar-header-collapse">
-                    
-                    <ul class="nav navbar-nav navbar-right">
-                        {% if request.user.is_authenticated %}
-                            <li><a href="{% url 'accounts:logout' %}">Logout</a></li>
-                        {% else %}
-                            <li><a href="{% url 'accounts:login' %}">Login</a></li>
-                            <li><a href="{% url 'accounts:register' %}">Sign Up</a></li>
-                            <li><p class="navbar-text navbar-right">Signed in as {{request.user.username}}</p></li>
-                        {% endif %}
-                    </ul>                             
-                </div> -->
-            </div>
+            </div>            
         </nav>
     </header>
     <div class="container">
