--- a/user_profiles/templates/user_profiles/profile.html
+++ b/user_profiles/templates/user_profiles/profile.html
@@ -3,27 +3,29 @@
 {% block content %}
 	<div class="row">
 		<div class="col-lg-3 col-xs-4 tweet-lg-left">
-			<h2>{{user_data.username}}</h2>
+			<h2>
+				Test
+				{{username}}
+			</h2>
+
 		</div>
 		<div class="col-lg-6 col-xs-8 tweet-lg-center">
 			
-				{% if tweets %}
+				{% if user_profiles %}
 				    	
-						{% for tweet in tweets %}
+						{% for user_profile in user_profiles %}
 							<div class="panel panel-default">
-								{{tweet.tweet_text}}
+								{{user_profile.username}}
 							</div>
 						{% endfor %}
 				
 				{% else %}
-				    <p>There are no tweets.</p>
+				    <p>There are no users.</p>
 
 				{% endif %}
 			
 
-			<a class="btn btn-primary btn-block btn-lg" href="{% url 'tweets:tweet_new' %}">
-				Compose new Tweet
-			</a>
+			
 		</div>
 		<div class="col-lg-3 col-xs-4 tweet-lg-right">
 			Who to follow
