--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,5 +1,26 @@
 {% extends "core/base.html" %}
 
 {% block content %}
-    still testing
+	<div class="row">
+		<div class="col-lg-3 col-xs-4 tweet-lg-left">
+			<h2>
+				{{full_name}}
+			</h2>
+			<p>
+				{{username}}
+			</p>
+		</div>
+		<div class="col-lg-6 col-xs-8 tweet-lg-center">
+			{% include 'tweets/tweet_list.html' %}
+			
+		</div>
+		<div class="col-lg-3 col-xs-4 tweet-lg-right">
+			<h3>Who to Follow</h3>
+				{% for user in users %}
+					<div class="col-offset-xs-2">
+						{{user.username}}
+					</div>
+				{% endfor %}
+		</div>
+	</div>
 {% endblock content %}
