--- a/user_profiles/templates/user_profiles/profile.html
+++ b/user_profiles/templates/user_profiles/profile.html
@@ -9,14 +9,20 @@
 			<p>
 				{{username}}
 			</p>
+			<div class="panel">
+				<h3>Users</h3>
+				{% for user in users %}
+					<div class="col-offset-xs-2">
+						{{user.username}}
+					</div>
+				{% endfor %}
+			</div>
 
 		</div>
 		<div class="col-lg-6 col-xs-8 tweet-lg-center">
 			{% include 'tweets/tweet_list.html' %}	
 
-			{% for user in users %}
-				{{user.username}}
-			{% endfor %}
+			
 		</div>
 		<div class="col-lg-3 col-xs-4 tweet-lg-right">
 			Who to follow
