Able to add user to tweet.

--- a/tweets/templates/tweets/tweet_list.html
+++ b/tweets/templates/tweets/tweet_list.html
@@ -13,8 +13,8 @@
 				<div class="col-xs-1"></div>
 				<div class="col-xs-10">
 					<div class="row">
-						<strong>{{user.first_name}} {{user.last_name}}</strong>
-						@{{user.username}}-
+						<strong>{{tweet.user.first_name}} {{tweet.user.last_name}}</strong>
+						@{{tweet.user.username}}-
 						{{tweet.published_date}}
 					</div>
 					<div class="row">	
