--- a/tweets/templates/tweets/tweet_display.html
+++ b/tweets/templates/tweets/tweet_display.html
@@ -3,14 +3,24 @@
 {% block content %}
 	<div class="row">
 		<div class="col-lg-3 col-xs-4 tweet-lg-left">
-			Trends
+			<h2>
+				{{full_name}}
+			</h2>
+			<p>
+				{{username}}
+			</p>
 		</div>
 		<div class="col-lg-6 col-xs-8 tweet-lg-center">
-			
 			{% include 'tweets/tweet_list.html' %}
+			
 		</div>
 		<div class="col-lg-3 col-xs-4 tweet-lg-right">
-			Who to follow
+			<h3>Who to Follow</h3>
+				{% for user in users %}
+					<div class="col-offset-xs-2">
+						{{user.username}}
+					</div>
+				{% endfor %}
 		</div>
 	</div>
 {% endblock content %}
