--- a/user_profiles/templates/user_profiles/profile.html
+++ b/user_profiles/templates/user_profiles/profile.html
@@ -9,23 +9,18 @@
 			<p>
 				{{username}}
 			</p>
-			<div class="panel">
-				<h3>Users</h3>
+		</div>
+		<div class="col-lg-6 col-xs-8 tweet-lg-center">
+			{% include 'tweets/tweet_list.html' %}
+			
+		</div>
+		<div class="col-lg-3 col-xs-4 tweet-lg-right">
+			<h3>Who to Follow</h3>
 				{% for user in users %}
 					<div class="col-offset-xs-2">
 						{{user.username}}
 					</div>
 				{% endfor %}
-			</div>
-
-		</div>
-		<div class="col-lg-6 col-xs-8 tweet-lg-center">
-			{% include 'tweets/tweet_list.html' %}	
-
-			
-		</div>
-		<div class="col-lg-3 col-xs-4 tweet-lg-right">
-			Who to follow
 		</div>
 	</div>
 {% endblock content %}
