--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-fixed-top">
+        <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">             
                 <ul class="nav navbar-nav">
                     <li><img class="navbar-brand icon-logo" src="https://www.dropbox.com/s/hx8tbx991rkz3rr/awesome_tweet.png?dl=1"/></li>
