--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -64,11 +64,29 @@
             </div>            
         </nav>
     </header>
+    
     <div class="container">
-            
-            {% block content %}
+        <div class="row">
 
-            {% endblock %}
+            <div class="col-lg-3 col-xs-4 tweet-lg-left">
+                {% block content1 %}
+                    
+                {% endblock content1 %}
+            </div>
+
+            <div class="col-lg-6 col-xs-8 tweet-lg-center">
+                {% block content2 %}
+                    
+                {% endblock content2 %}
+            </div>
+
+            <div class="col-lg-3 col-xs-4 tweet-lg-right">
+                {% block content3 %}
+                    
+                {% endblock content3 %}
+                
+            </div>
+        </div>    
        
     </div>
     <footer class="page-footer">
