--- a/tweets/templates/tweets/tweet_list.html
+++ b/tweets/templates/tweets/tweet_list.html
@@ -6,9 +6,9 @@
 			<img src="{% static 'core/awesome_profile.png' %}" class="user-photo">
 		</div>
 		<div class="col-xs-1"></div>
-		<div class="col-xs-10">
+		<div class="col-xs-10 tweet-rows">
 			<div class="row">
-				<strong>{{tweet.user.first_name}} {{tweet.user.last_name}}</strong>
+				<strong>{{full_name}}</strong>
 				@{{tweet.user.username}}-
 				{{tweet.published_date}}
 			</div>
