--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -87,7 +87,10 @@
                 
             </div>
         </div>    
-       
+    {% block content %}
+        
+    {% endblock content %}
+
     </div>
     <footer class="page-footer">
         <hr>
