--- a/user_profiles/templates/user_profiles/profile.html
+++ b/user_profiles/templates/user_profiles/profile.html
@@ -5,7 +5,7 @@
 		{{full_name}}
 	</h2>
 	<p>
-		{{username}}
+		@{{username}}
 	</p>
 {% endblock content1 %}    
 {% block content2 %}
@@ -28,8 +28,23 @@
 
 	<h3>Who to Follow</h3>
 		{% for user in users %}
-			<div class="col-offset-xs-2">
-				{{user.username}}
+			<a href="{% url 'user_profiles:other_profile' user.id %}">
+				Link
+			</a>
+			<div class="panel panel-default to-follow">
+				<div class="row">
+					<div class="col-xs-3">
+						{% load static %}
+						<img src="{% static 'core/awesome_profile.png' %}" class="follow-user-photo">
+					</div>
+
+					<div class="col-xs-9 tweet-rows">
+						<div class="row">
+							<strong>{{user.first_name.title}} {{user.last_name.title}}</strong>
+							@{{user.username}}
+						</div>					
+					</div>	
+				</div>	
 			</div>
 		{% endfor %}
 				
