--- a/core/static/core/styles.css
+++ b/core/static/core/styles.css
@@ -43,6 +43,7 @@ body {
 	width: 48px;
 	border-radius: 5px;
 	margin-top: 12px;
+	margin-left: 2px;
 	background-color: #1da1f2;
 }
 
@@ -58,6 +59,7 @@ body {
 .follow-user-photo {
 	width: 30px;
 	border-radius: 5px;
-	margin-top: 12px;
+	margin-top: 10px;
+	margin-left: 1px;
 	background-color: #1da1f2;
 }
