--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -68,24 +68,26 @@
     <div class="container">
         <div class="row">
 
-            <div class="col-lg-3 col-xs-4 tweet-lg-left">
+            <div class="col-lg-3 col-xs-12 tweet-lg-left">
                 {% block content1 %}
                     
                 {% endblock content1 %}
             </div>
-
-            <div class="col-lg-6 col-xs-8 tweet-lg-center">
-                {% block content2 %}
-                    
-                {% endblock content2 %}
-            </div>
-
-            <div class="col-lg-3 col-xs-4 tweet-lg-right">
+            
+            <div class="col-lg-3 col-lg-push-6 col-xs-4 tweet-lg-right">
                 {% block content3 %}
                     
                 {% endblock content3 %}
                 
             </div>
+
+            <div class="col-lg-6 col-lg-pull-3 col-xs-8 tweet-lg-center">
+                {% block content2 %}
+                    
+                {% endblock content2 %}
+            </div>
+
+            
         </div>    
     {% block content %}
         
