--- a/tweets/templates/tweets/tweet_display.html
+++ b/tweets/templates/tweets/tweet_display.html
@@ -18,11 +18,6 @@
 
 {% block content3 %}
 
-	<h3>Who to Follow</h3>
-		{% for user in users %}
-			<div class="col-offset-xs-2">
-				{{user.username}}
-			</div>
-		{% endfor %}
+	{% include 'user_profiles/who_to_follow.html' %}
 				
 {% endblock content3 %}
