--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -43,17 +43,17 @@
 
                 <li class="navbar-right">
                     {% if request.user.is_authenticated %}
-                        <a class="navbar-brand navbar-right" href="{% url 'accounts:logout' %}">Logout
+                        <a class="navbar-brand navbar-right" href="{% url 'accounts:logout' %}">
+                        Logout
                         </a>
                     {% else %}
                         <a class="navbar-brand navbar-right" href="{% url 'accounts:login' %}">Login</a>
                         <a class="navbar-brand navbar-right" href="{% url 'accounts:register' %}">Sign Up</a>
-                        <p class="navbar-text navbar-right">
-                            Signed in as {{request.user.username}}
-                        </p>
+                        
                     {% endif %}
 
                     <a class="navbar-brand navbar-right navbar-fixed-top" href="{% url 'user_profiles:profile_list' %}"> 
+                        {{username}}
                         {% load static %}
                         <img src="{% static 'core/awesome_profile.png' %}" class="navbar-brand user-photo-nav">
                     </a>
