--- a/core/static/core/styles.css
+++ b/core/static/core/styles.css
@@ -1,6 +1,7 @@
 body {
 	margin-top: 80px;
 	font-family: Helvetica;
+	margin-bottom: 70px;
 }
 
 .icon-bar {
@@ -47,8 +48,13 @@ body {
 	background-color: #1da1f2;
 }
 
+.tweet-button {
+	border: 1px solid grey;
+}
+
 .tweet-icon {
-	width: 40px;
+	width: 35px;
+	background-color: white;
 }
 
 .page-footer {
