--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -42,6 +42,9 @@
                     </a></li>
 
                 <li class="navbar-right">
+                    <a class="navbar-brand navbar-right" href="{% url 'tweets:tweet_new' %} ">
+                        <img class="tweet-icon" src="http://buyfollowersguide.com/wp-content/uploads/2014/10/twitter-tweet-icon.png">
+                    </a>
                     {% if request.user.is_authenticated %}
                         <a class="navbar-brand navbar-right" href="{% url 'accounts:logout' %}">
                         Logout
@@ -53,7 +56,7 @@
                     {% endif %}
 
                     <a class="navbar-brand navbar-right navbar-fixed-top" href="{% url 'user_profiles:profile_list' %}"> 
-                        {{username}}
+                        {{user.username}}
                         {% load static %}
                         <img src="{% static 'core/awesome_profile.png' %}" class="navbar-brand user-photo-nav">
                     </a>
