--- a/user_profiles/templates/user_profiles/profile.html
+++ b/user_profiles/templates/user_profiles/profile.html
@@ -9,7 +9,16 @@
 	</p>
 {% endblock content1 %}    
 {% block content2 %}
-						
+	<form action="{% url 'tweets:tweet_new' %} " method="POST">
+    	{% csrf_token %}
+    	{% for field in form %}
+    		{% include "core/_form_input.html" %}
+    	{% endfor %}
+
+    	<button type="submit" class="btn tweet-button">
+    		<img class="tweet-icon" src="http://buyfollowersguide.com/wp-content/uploads/2014/10/twitter-tweet-icon.png">Tweet
+    	</button>
+    </form>					
 	{% if tweets %}			    	
 		{% for tweet in tweets %}
 			{% if tweet.user.username == username %}
