--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -25,7 +25,11 @@
                 <ul class="nav navbar-nav">
                     <li><img class="navbar-brand icon-logo" src="https://www.dropbox.com/s/hx8tbx991rkz3rr/awesome_tweet.png?dl=1"/></li>
 
-                    <li><a href="{% url 'core:index' %}" class="navbar-brand">
+                    <li><a href="{% url 'core:index' %}" class="navbar-brand visible-lg">
+                        <i class="fa fa-home" aria-hidden="true"></i>
+                        Home
+                    </a></li>
+                    <li><a href="{% url 'core:index' %}" class="navbar-brand hidden-lg">
                         <i class="fa fa-home" aria-hidden="true"></i>
                     </a></li>
 
@@ -33,34 +37,39 @@
                         <i class="fa fa-bolt" aria-hidden="true"></i>
                     </a></li>
 
-                    <li><a href="{% url 'tweets:tweet_display' %}" class="navbar-brand">
+                    <li><a href="{% url 'tweets:tweet_display' %}" class="navbar-brand visible-lg">
+                        <i class="fa fa-bell" aria-hidden="true"></i>
+                        Notifications
+                    </a></li>
+                    <li><a href="{% url 'tweets:tweet_display' %}" class="navbar-brand hidden-lg visible-xs">
                         <i class="fa fa-bell" aria-hidden="true"></i>
                     </a></li>
                     
                     <li><a href="{% url 'core:index' %}" class="navbar-brand">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
                     </a></li>
-
-                <li class="navbar-right">
-                    <a class="navbar-brand navbar-right" href="{% url 'tweets:tweet_new' %} ">
-                        <img class="tweet-icon" src="http://buyfollowersguide.com/wp-content/uploads/2014/10/twitter-tweet-icon.png">
-                    </a>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
                     {% if request.user.is_authenticated %}
-                        <a class="navbar-brand navbar-right" href="{% url 'accounts:logout' %}">
+                        <li><a href="{% url 'accounts:logout' %}">
                         Logout
-                        </a>
+                        </a></li>
+                            <li><a class="navbar-brand" href="{% url 'user_profiles:profile_list' %}"> 
+                            {{user.username}}
+                            {% load static %}
+                            <img src="{% static 'core/awesome_profile.png' %}" class="navbar-brand user-photo-nav">
+                        </a></li>
                     {% else %}
-                        <a class="navbar-brand navbar-right" href="{% url 'accounts:login' %}">Login</a>
-                        <a class="navbar-brand navbar-right" href="{% url 'accounts:register' %}">Sign Up</a>
+                        <li><a href="{% url 'accounts:login' %}">Login</a></li>
+                        <li><a href="{% url 'accounts:register' %}">Sign Up</a></li>
                         
                     {% endif %}
 
-                    <a class="navbar-brand navbar-right navbar-fixed-top" href="{% url 'user_profiles:profile_list' %}"> 
-                        {{user.username}}
-                        {% load static %}
-                        <img src="{% static 'core/awesome_profile.png' %}" class="navbar-brand user-photo-nav">
-                    </a>
-                </li>
+                    
+                    <li><a href="{% url 'tweets:tweet_new' %} ">
+                        <img class="tweet-icon" src="http://buyfollowersguide.com/wp-content/uploads/2014/10/twitter-tweet-icon.png">
+                    </a></li>
+                
                 </ul>
                 
                 
