--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -52,7 +52,7 @@
                     <li><a class="navbar-right" href="{% url 'tweets:tweet_new' %} ">
                         <img class="tweet-icon" src="http://buyfollowersguide.com/wp-content/uploads/2014/10/twitter-tweet-icon.png">
                     </a></li>
-                    
+
                     {% if request.user.is_authenticated %}
                         <li><a class="navbar-right" href="{% url 'accounts:logout' %}">
                         Logout
@@ -106,7 +106,7 @@
     <footer class="page-footer">
         <hr>
         <div class="container">
-            &copy; Awesome Inc U. Bootcamp 2016
+            &copy; KellyInnovation
         </div>
     </footer>
 
